--- a/index.html
+++ b/index.html
@@ -240,7 +240,11 @@
           <div class="column">
             <div class="column-2 bg-light">
               <h2>Request Callback</h2>
-              <form action="process.php" class="callback-form" method="POST">
+              <form
+                action="process.php"
+                class="callback-form"
+                method="POST"
+                data-netlify="true">
                 <div class="form-control">
                   <label for="name"></label>
                   <input
